Fixed paste bug on IE and overflow issue

--- a/flextable/resources/css/flextable.css
+++ b/flextable/resources/css/flextable.css
@@ -5,6 +5,11 @@
   background: #fafafa;
 }
 
+.flextable-overflow-wrapper {
+  max-width: 100%;
+  overflow: auto;
+}
+
 .matrixblock .flextable-wrapper {
   padding: 0;
   border: 0;
